--- a/style.css
+++ b/style.css
@@ -45,11 +45,14 @@ html ,body{
     display: flex;
     justify-content:flex-start;
     align-items:center;
-    flex-direction:column;
+    flex-direction:row;
     flex-wrap: wrap;
 }
 #flag{
-    margin-top: 10%;
+    height:300px;
+    width: 500px;
+    margin-top: 2%;
+    margin-left: 7%;
 }
 #countryDetail{
     display: flex;
